// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaceCardList render correctly on MainPage 1`] = `
<div
  className="cities__places-list tabs__content places__list"
>
  <PlaceCard'
    offer={
      Object {
        "accommodation": Object {
          "bedroomsCount": 0,
          "features": Array [],
          "guestsLimit": 0,
          "isPremium": true,
          "price": 0,
          "rating": 0,
          "title": "",
          "type": "",
        },
        "city": "",
        "cityLocation": Object {
          "latitude": 0,
          "longitude": 0,
          "zoom": 0,
        },
        "coordinates": Array [
          0,
          0,
        ],
        "description": "",
        "host": Object {
          "avatar": "",
          "isPro": true,
          "name": "",
        },
        "id": 1,
        "images": Array [],
        "isFavorite": true,
        "previewImage": "",
      }
    }
    onFavoriteButtonClick={[Function]}
    typePage="main"
  />
  <PlaceCard'
    offer={
      Object {
        "accommodation": Object {
          "bedroomsCount": 0,
          "features": Array [],
          "guestsLimit": 0,
          "isPremium": true,
          "price": 0,
          "rating": 0,
          "title": "",
          "type": "",
        },
        "city": "",
        "cityLocation": Object {
          "latitude": 0,
          "longitude": 0,
          "zoom": 0,
        },
        "coordinates": Array [
          0,
          0,
        ],
        "description": "",
        "host": Object {
          "avatar": "",
          "isPro": true,
          "name": "",
        },
        "id": 2,
        "images": Array [],
        "isFavorite": true,
        "previewImage": "",
      }
    }
    onFavoriteButtonClick={[Function]}
    typePage="main"
  />
</div>
`;

exports[`PlaceCardList render correctly on OfferPage 1`] = `
<div
  className="near-places__list places__list"
>
  <PlaceCard'
    offer={
      Object {
        "accommodation": Object {
          "bedroomsCount": 0,
          "features": Array [],
          "guestsLimit": 0,
          "isPremium": true,
          "price": 0,
          "rating": 0,
          "title": "",
          "type": "",
        },
        "city": "",
        "cityLocation": Object {
          "latitude": 0,
          "longitude": 0,
          "zoom": 0,
        },
        "coordinates": Array [
          0,
          0,
        ],
        "description": "",
        "host": Object {
          "avatar": "",
          "isPro": true,
          "name": "",
        },
        "id": 1,
        "images": Array [],
        "isFavorite": true,
        "previewImage": "",
      }
    }
    onFavoriteButtonClick={[Function]}
    typePage="offer"
  />
  <PlaceCard'
    offer={
      Object {
        "accommodation": Object {
          "bedroomsCount": 0,
          "features": Array [],
          "guestsLimit": 0,
          "isPremium": true,
          "price": 0,
          "rating": 0,
          "title": "",
          "type": "",
        },
        "city": "",
        "cityLocation": Object {
          "latitude": 0,
          "longitude": 0,
          "zoom": 0,
        },
        "coordinates": Array [
          0,
          0,
        ],
        "description": "",
        "host": Object {
          "avatar": "",
          "isPro": true,
          "name": "",
        },
        "id": 2,
        "images": Array [],
        "isFavorite": true,
        "previewImage": "",
      }
    }
    onFavoriteButtonClick={[Function]}
    typePage="offer"
  />
</div>
`;
